--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,25 @@
 version: 2.1
 
-orbs: 
-  # Use the Orb based on the need of your project
-  github-super-linter: circleci/github-super-linter@1.0.0
+orbs:
+  docker: circleci/docker@1.1.0
+
+jobs:
+  build-and-publish:
+    docker:
+      - image: docker:19.03.13-git
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build and push Docker image
+          command: |
+            docker build -t my-dockerhub-username/my-docker-image-name .
+            docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+            docker push my-dockerhub-username/my-docker-image-name
 
 workflows:
-  # Configure the workflow based on the Orb chosen above
-  lint-code-with-options:
+  version: 2
+  build-and-publish:
     jobs:
-      - github-super-linter/lint:
-          version: v4
-
-# Refer the list of GitHub repositories: https://github.com/orgs/CXEPI/repositories?language=&q=orb&sort=&type=all to choose the right one for your use case.
-# Note: There are some Orb repositories that might not be qualified for usage, so check the README of the repositories if it's  qualified to use in CircleCI or connect with the contributors of those repositories.
+      - build-and-publish:
+          context: dockerhub
