--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           command: |
             docker build -t my-dockerhub-username/my-docker-image-name .
             docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
-            docker push my-dockerhub-username/my-docker-image-name
+            sudo docker push my-dockerhub-username/my-docker-image-name
 
 workflows:
   version: 2
